[package]
name = "serde-bytes-ng"
version = "0.1.0"
edition = "2021"
description = "Serde support for byte array of any size [u8; N]"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.193", default-features = false }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_test = "1.0.176"
