[package]
name = "serde_bytes_ng"
version = "0.1.0"
edition = "2021"
description = "Optimized handling of `[u8; N]`, `&[u8]` and `Vec<u8>` for Serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1.0.166", default-features = false }

[dev-dependencies]
bincode = "1.3.3"
serde_derive = "1.0.166"
serde_test = "1.0.166"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
